...
)


object NavBarItems {
    val BarItems = listOf(
        BarItem("Home", Icons.Filled.Home, Navigation.Home, Navigation.Home.route),
        BarItem("Gallery", Icons.Filled.PhotoLibrary, Navigation.Gallery, Navigation.Gallery.route),
        BarItem("Play", Icons.Filled.PlayCircleFilled, Navigation.Play, Navigation.Play.route)
    )
}


@Composable
fun BottomNavigationBar(navController: NavController) {
...
