...
            ,
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ){
        //Top text
        ImageResourceDemo()
        Text("Welcome to the Quiz App.v2!",
            fontSize = 24.sp,
            fontWeight = FontWeight.Bold,
            textDecoration = TextDecoration.Underline)
        //Undertext
        Text("Assignment number 2",
                fontSize = 20.sp,
...
